PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_11-139_if_no_condition_invalid/gcc-compile.txt
input.c:4:7: error: expected '(' after 'if'
    if{
      ^
1 error generated.

return code: 1
